<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".presentation.WelcomeFragment">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:src="@drawable/ic_brain"
                android:contentDescription="@string/logo_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_fragment_title"
                android:textSize="24sp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_view_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_fragment_content"
                android:textSize="16sp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

            <Button
                android:id="@+id/button_welcome_fragment_understand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/welcome_fragment_button"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>