<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.example.composition.domain.entities.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/image_view_game_finished_smile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_finished_fragment_smile"
            app:resultEmoji="@{gameResult.isWinner}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_game_finished_required_answers"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/text_view_game_finished_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:required_answer="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_game_finished_score_answers"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/game_finished_fragment_required_answer" />

        <TextView
            android:id="@+id/text_view_game_finished_score_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:score_answer="@{gameResult.countOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintStart_toStartOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintEnd_toEndOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintBottom_toTopOf="@id/text_view_game_finished_required_percent"
            tools:text="@string/game_finished_fragment_score_answer" />

        <TextView
            android:id="@+id/text_view_game_finished_required_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:required_percent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@id/text_view_game_finished_score_answers"
            app:layout_constraintStart_toStartOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintEnd_toEndOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintBottom_toTopOf="@id/text_view_game_finished_score_percent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/game_finished_fragment_required_percent" />

        <TextView
            android:id="@+id/text_view_game_finished_score_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:score_percent="@{gameResult}"
            app:layout_constraintTop_toBottomOf="@id/text_view_game_finished_required_percent"
            app:layout_constraintStart_toStartOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintEnd_toEndOf="@id/text_view_game_finished_required_answers"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/game_finished_fragment_score_percent" />

        <Button
            android:id="@+id/button_game_finished_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_finished_fragment_button_retry"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>